--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -17,6 +15,9 @@
 }
 
 body {
+  padding: 100px;
+  max-width: 800px;
+  margin: auto;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
