--- a/src/app/components/Navigation.module.css
+++ b/src/app/components/Navigation.module.css
@@ -1,16 +1,19 @@
 .header {
     border: 1px solid #f0f0f0;
     border-radius: 4px;
-    padding: 4px
+    padding: 4px;
+    background-color: rgb(179, 179, 184);
 }
 .navigation {
     display: flex;
     list-style: none;
     gap: 32px;
+    background-color: rgb(179, 179, 184);
 }
 
 .navigation a:hover {
     color: #f0f0f0;
     text-decoration: underline;
+    text-decoration: #f0f0f0;
 }
 
