--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,10 +19,6 @@ body {
   max-width: 800px;
   margin: auto;
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: rgb(99, 99, 99);
+  
 }
